--- a/src/stories/DrogalInternalUI/DS/icons.css
+++ b/src/stories/DrogalInternalUI/DS/icons.css
@@ -148,6 +148,11 @@
   font-size: 10px;
   color: #666;
   text-align: center;
+}
+
+.scroll-trigger {
+  height: 20px;
+  margin: 20px 0;
   word-break: break-word;
   max-width: 100%;
 }
