--- a/src/styles/core/components/input/_inputtext.scss
+++ b/src/styles/core/components/input/_inputtext.scss
@@ -46,25 +46,32 @@
     }
 }
 
-.p-float-label > label {
+.p-inputtext-label {
+    font-family: var(--font-family);
+    font-feature-settings: var(--font-feature-settings, normal);
+    font-size: $inputTextFontSize;
+    color: $inputTextColor;
+}
+
+.p-float-label>label {
     left: nth($inputPadding, 2);
     color: $inputPlaceholderTextColor;
     transition-duration: $transitionDuration;
 }
 
-.p-float-label > .p-invalid + label {
+.p-float-label>.p-invalid+label {
     color: $inputErrorBorderColor;
 }
 
-.p-icon-field-left > .p-inputtext {
+.p-icon-field-left>.p-inputtext {
     padding-left: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
-.p-icon-field-left.p-float-label > label {
+.p-icon-field-left.p-float-label>label {
     left: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
-.p-icon-field-right > .p-inputtext {
+.p-icon-field-right>.p-inputtext {
     padding-right: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
