--- a/src/styles/core/components/input/_inputtext.scss
+++ b/src/styles/core/components/input/_inputtext.scss
@@ -56,7 +56,9 @@
     color: $inputErrorBorderColor;
 }
 
-.p-icon-field-left>.p-inputtext {
+// 16/01/2026 - Adicionado ">div>" para aumentar a especificidade e evitar conflito com outras classes
+// E manter a consistência com o seletor .p-icon-field-right>.p-inputtext
+.p-icon-field-left>div>.p-inputtext {
     padding-left: nth($inputPadding, 2) * 2 + $primeIconFontSize;
 }
 
