feat: ajustes em alguns componentes

--- a/src/styles/core/components/label/_labelInput.scss
+++ b/src/styles/core/components/label/_labelInput.scss
@@ -3,4 +3,5 @@
   font-feature-settings: var(--font-feature-settings, normal);
   font-size: $inputTextFontSize;
   color: $inputTextColor;
+  font-weight: 500;
 }
