--- a/src/theme.css
+++ b/src/theme.css
@@ -22166,7 +22166,7 @@
     padding: 0.5rem;
     background: #ffffff;
     color: #6c6c6c;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     border-radius: 8px;
   }
   .p-datepicker:not(.p-datepicker-inline) {
@@ -22377,7 +22377,7 @@
   }
   .p-cascadeselect {
     background: #ffffff;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     border-radius: 8px;
     outline-color: transparent;
@@ -22406,7 +22406,7 @@
     padding: 0.5rem 0.75rem;
   }
   .p-cascadeselect .p-cascadeselect-label.p-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   .p-cascadeselect .p-cascadeselect-label:enabled:focus {
     outline: 0 none;
@@ -22783,7 +22783,7 @@
   }
   .p-dropdown {
     background: #ffffff;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     border-radius: 8px;
     outline-color: transparent;
@@ -22817,7 +22817,7 @@
     border: 0 none;
   }
   .p-dropdown .p-dropdown-label.p-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   .p-dropdown .p-dropdown-label:focus, .p-dropdown .p-dropdown-label:enabled:focus {
     outline: 0 none;
@@ -22910,14 +22910,14 @@
   .p-inputgroup-addon {
     background: #f5f5f5;
     color: #898989;
-    border-top: 2px solid #e1e1e1;
-    border-left: 2px solid #e1e1e1;
-    border-bottom: 2px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    border-left: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
     padding: 0.5rem 0.75rem;
     min-width: 2.857rem;
   }
   .p-inputgroup-addon:last-child {
-    border-right: 2px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
   }
   .p-inputgroup > .p-component,
   .p-inputgroup > .p-inputwrapper > .p-inputtext,
@@ -23055,7 +23055,7 @@
     color: #6c6c6c;
     background: #ffffff;
     padding: 0.5rem 0.75rem;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     appearance: none;
     border-radius: 8px;
@@ -23092,7 +23092,7 @@
   }
   .p-float-label > label {
     left: 0.75rem;
-    color: #898989;
+    color: #cac6c6;
     transition-duration: 0.3s;
   }
   .p-float-label > .p-invalid + label {
@@ -23108,16 +23108,16 @@
     padding-right: 2.5rem;
   }
   ::-webkit-input-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   :-moz-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   ::-moz-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   :-ms-input-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   .p-input-filled .p-inputtext {
     background-color: #f2f2f2;
@@ -23195,7 +23195,7 @@
   .p-listbox {
     background: #ffffff;
     color: #6c6c6c;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     border-radius: 8px;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     outline-color: transparent;
@@ -23391,7 +23391,7 @@
   }
   .p-multiselect {
     background: #ffffff;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     border-radius: 8px;
     outline-color: transparent;
@@ -23419,7 +23419,7 @@
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
   }
   .p-multiselect .p-multiselect-label.p-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   .p-multiselect.p-multiselect-chip .p-multiselect-token {
     padding: 0.25rem 0.75rem;
@@ -23798,7 +23798,7 @@
   }
   .p-treeselect {
     background: #ffffff;
-    border: 2px solid #e1e1e1;
+    border: 1px solid #e1e1e1;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     border-radius: 8px;
   }
@@ -23828,7 +23828,7 @@
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
   }
   .p-treeselect .p-treeselect-label.p-placeholder {
-    color: #898989;
+    color: #cac6c6;
   }
   .p-treeselect.p-treeselect-chip .p-treeselect-token {
     padding: 0.25rem 0.75rem;
@@ -24001,12 +24001,13 @@
     font-feature-settings: var(--font-feature-settings, normal);
     font-size: 1rem;
     color: #6c6c6c;
+    font-weight: 500;
   }
   .p-button {
     color: #ffffff;
     background: #1F95E3;
     border: 2px solid #1F95E3;
-    padding: 0.5rem 1rem;
+    padding: 0.54rem 1rem;
     font-size: 1rem;
     transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
     border-radius: 8px;
@@ -24122,14 +24123,14 @@
   }
   .p-button.p-button-sm {
     font-size: 0.875rem;
-    padding: 0.4375rem 0.875rem;
+    padding: 0.4725rem 0.875rem;
   }
   .p-button.p-button-sm .p-button-icon {
     font-size: 0.875rem;
   }
   .p-button.p-button-lg {
     font-size: 1.25rem;
-    padding: 0.625rem 1.25rem;
+    padding: 0.675rem 1.25rem;
   }
   .p-button.p-button-lg .p-button-icon {
     font-size: 1.25rem;
@@ -24585,14 +24586,14 @@
   }
   .p-splitbutton.p-button-sm > .p-button {
     font-size: 0.875rem;
-    padding: 0.4375rem 0.875rem;
+    padding: 0.4725rem 0.875rem;
   }
   .p-splitbutton.p-button-sm > .p-button .p-button-icon {
     font-size: 0.875rem;
   }
   .p-splitbutton.p-button-lg > .p-button {
     font-size: 1.25rem;
-    padding: 0.625rem 1.25rem;
+    padding: 0.675rem 1.25rem;
   }
   .p-splitbutton.p-button-lg > .p-button.p-button-icon-only {
     width: auto;
@@ -28902,5 +28903,5 @@
 .drg-input-spacing {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
