feat: ajustes no padding dos inputs

--- a/src/styles/core/components/input/_dropdown.scss
+++ b/src/styles/core/components/input/_dropdown.scss
@@ -138,6 +138,7 @@ input.p-dropdown-label {
 
         &.p-placeholder {
             color: $inputPlaceholderTextColor;
+            font-size: $inputPlaceholderSize;
         }
 
         &:focus,
