--- a/src/styles/core/components/input/_treeselect.scss
+++ b/src/styles/core/components/input/_treeselect.scss
@@ -38,6 +38,7 @@
 
         &.p-placeholder {
             color: $inputPlaceholderTextColor;
+            font-size: $inputPlaceholderSize;
         }
     }
 
