--- a/src/styles/core/components/label/_labelInput.scss
+++ b/src/styles/core/components/label/_labelInput.scss
@@ -1,7 +1,7 @@
 .drg-label-input {
   font-family: var(--font-family);
   font-feature-settings: var(--font-feature-settings, normal);
-  font-size: $inputTextFontSize;
+  font-size: $inputPlaceholderSize;
   color: $inputTextColor;
   font-weight: 500;
 }
