--- a/src/styles/core/components/input/_cascadeselect.scss
+++ b/src/styles/core/components/input/_cascadeselect.scss
@@ -32,6 +32,7 @@
 
         &.p-placeholder {
             color: $inputPlaceholderTextColor;
+            font-size: $inputPlaceholderSize;
         }
 
         &:enabled:focus {
