--- a/src/styles/core/components/input/_multiselect.scss
+++ b/src/styles/core/components/input/_multiselect.scss
@@ -141,6 +141,7 @@
 
         &.p-placeholder {
             color: $inputPlaceholderTextColor;
+            font-size: $inputPlaceholderSize;
         }
     }
 
